fix overflow of menu

--- a/src/app/upload-post/upload-post.component.scss
+++ b/src/app/upload-post/upload-post.component.scss
@@ -33,3 +33,7 @@ ul{
     padding: 2px 10px;
 
 }
+.cat-menu{
+    max-height: 400px;
+    overflow-y: auto;
+}
